# esp-laundry-alert

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/ulp/: my_ulp.S
